--- a/plural.health/Views/Appointments/Index.cshtml
+++ b/plural.health/Views/Appointments/Index.cshtml
@@ -397,37 +397,64 @@
 
 
     <!-- TABLE -->
-    <div class="table-responsive shadow-sm rounded bg-white py-2 px-4">
+    <div class="table-responsive shadow-sm m-0 p-0">
 
-        <table class="table align-middle mb-0">
-            <thead class="table-light">
-                <tr style="color: #A6AFC2">
-                    <th>#</th>
-                    <th>Patient Information</th>
-                    <th>Clinic</th>
-                    <th>Wallet Bal. (₦)</th>
-                    <th>
+        <div class="container-fluid mt-3">
+            <div class="container-fluid">
+                <div class="row table-light px-4">
+                    <div class="col-2 text-muted p-2">
+                        <div class="col-sm-2 text-muted p-2">
+                            #
+                        </div>
+                    </div>
+                    <div class="col-2 bg- text-muted p-2 fw-semibold">
+                        Patient Information
+                    </div>
+                    <div class="col-2 bg- text-muted p-2 fw-semibold">
+                        Clinic
+                    </div>
+                    <div class="col-2 bg- text-muted p-2 fw-semibold">
+                        Wallet Bal. (₦)
+                    </div>
+                    <div class="col-2 bg- text-muted p-2 fw-semibold" style="">
                         Time / Date
                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2H13.5C14.3284 2 15 2.67157 15 3.5V13.5C15 14.3284 14.3284 15 13.5 15H1.5C0.671573 15 0 14.3284 0 13.5V3.5C0 2.67157 0.671573 2 1.5 2H3V0H4V2H11V0H12V2ZM6 8H3V7H6V8ZM12 7H9V8H12V7ZM6 11H3V10H6V11ZM9 11H12V10H9V11Z" fill="#0B0C7D" />
                         </svg>
-                    </th>
-                    <th align="right"><div class="px-3 py-2">Status</div></th>
-                </tr>
-            </thead>
-
-            <tbody>
+                    </div>
+                    <div class="col-2 bg- text-muted p-2 fw-semibold">
+                        Status
+                    </div>
+                </div>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td class="fw-bold">@item.Id</td>
+                    <div class="row my-2 bg-light" style="border-left: solid 4px #FF9D33; border-radius: 8px;padding-left:20px;">
+                        <div class="col-sm-2 bg- text-muted p-1">
+                            <div class="row">
+                                <div class="col-1">
+                                    <div class="col">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8ZM4.26667 8.53333H11.7333V7.46667H4.26667V8.53333Z" fill="#051438" />
+                                        </svg>
+                                    </div>
+                                    <div class="col">
+                                        <svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M0.750001 0.75L3.95 3.95L7.15 0.75" stroke="#051438" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="col-1">
+                                    <div class="py-3">
+                                        @item.Id
+                                    </div>
+                                </div>
+                            </div>
 
-                        <td>
+                            
+                        </div>
+                        <div class="col-2 bg- text-muted p-1">
                             <div class="d-flex align-items-center gap-3">
-
                                 <img src="~/image/logos/user.png" class="rounded-circle patient-img" />
-                                @* <img src="@item.ProfileImage" class="rounded-circle patient-img" /> *@
-
                                 <div>
                                     <div class="fw-bold">@item.PatientName</div>
                                     <div class="text-muted small">
@@ -436,24 +463,24 @@
                                 </div>
                                 <span class="status-badge bg-secondary-subtle px-2">New</span>
                             </div>
-                        </td>
-
-                        <td class="fw-semibold">@item.Clinic</td>
-
-                        <td>@item.WalletBalance.ToString("N0")</td>
-
-                        <td>
+                        </div>
+                        <div class="col-2 bg- text-muted p-1">
+                            @item.Clinic
+                        </div>
+                        <div class="col-2 bg- text-muted p-3">
+                            @item.WalletBalance.ToString("N0")
+                        </div>
+                        <div class="col-2 bg- text-muted p-1">
                             <div class="fw-bold text-primary">
                                 @item.AppointmentTime.ToString("hh:mm tt")
                             </div>
                             <div class="text-muted small">
                                 @item.AppointmentTime.ToString("dd MMM yyyy")
                             </div>
-                        </td>
-
-                        <td align="right">
-                            <div class="px-3 py-2 dropdown">
-                                <span class="badge bg-@item.StatusColor">@item.Status</span>
+                        </div>
+                        <div class="col-2 bg- text-muted p-1">
+                            <div class=" dropdown p-0 m-0" style="">
+                                <span class="badge bg-@item.StatusColor m-0">@item.Status</span>
                                 <span class="dropdown non-edit-hover" data-bs-toggle="dropdown">
                                     ...
                                 </span>
@@ -467,13 +494,13 @@
                                     <li><a class="dropdown-item" href="#">Another link</a></li> *@
                                 </ul>
                             </div>
-                        </td>
-                        
-                    </tr>
+                        </div>
+                    </div>
                 }
-            </tbody>
-        </table>
 
+            </div>
+
+        </div>
     </div>
 
 </div>
